--- a/Lumina/Runtime/CMakeLists.txt
+++ b/Lumina/Runtime/CMakeLists.txt
@@ -1,5 +1,12 @@
-file(GLOB_RECURSE RUNTIME_SOURCES src/*.cpp)
-file(GLOB_RECURSE RUNTIME_HEADERS include/*.h)
+set(RUNTIME_SOURCES
+    src/EntryPoint.cpp
+    src/Application.cpp
+)
+
+set(RUNTIME_HEADERS
+    include/Runtime/Application.h
+    include/Runtime/EntryPoint.h
+)
 
 add_library(Runtime STATIC ${RUNTIME_SOURCES} ${RUNTIME_HEADERS})
 target_include_directories(Runtime PUBLIC include)
