--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -1,3 +1,12 @@
-file(GLOB_RECURSE SANDBOX_SOURCES src/*.cpp src/*.h)
-add_executable(Sandbox ${SANDBOX_SOURCES})
+add_executable(Sandbox src/SandboxApp.cpp)
 target_link_libraries(Sandbox PRIVATE Core Runtime ScriptAPI)
+
+# Export functions for P/Invoke
+if(WIN32)
+    set_target_properties(Sandbox PROPERTIES
+        ENABLE_EXPORTS ON
+        LINK_FLAGS "/EXPORT:CreateString"
+    )
+else()
+    target_link_options(Sandbox PRIVATE "LINKER:--export-dynamic")
+endif()
