--- a/Lumina/Runtime/CMakeLists.txt
+++ b/Lumina/Runtime/CMakeLists.txt
@@ -8,6 +8,7 @@ set(RUNTIME_HEADERS
     include/Runtime/EntryPoint.h
 )
 
-add_library(Runtime STATIC ${RUNTIME_SOURCES} ${RUNTIME_HEADERS})
+add_library(Runtime SHARED ${RUNTIME_SOURCES} ${RUNTIME_HEADERS})
 target_include_directories(Runtime PUBLIC include)
 target_link_libraries(Runtime PUBLIC Core)
+target_compile_definitions(Runtime PRIVATE RUNTIME_EXPORTS)
