--- a/Lumina/Runtime/ScriptAPI/ScriptAPI.csproj
+++ b/Lumina/Runtime/ScriptAPI/ScriptAPI.csproj
@@ -1,10 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
+		<AssemblyName>ScriptAPI</AssemblyName>
 		<OutputType>Library</OutputType>
 		<TargetFramework>net9.0</TargetFramework>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-		<OutputPath>../../../../bin</OutputPath>
+		<!-- Fix output path to match build directory -->
+		<OutputPath>${CMAKE_BINARY_DIR}/bin</OutputPath>
 		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+		<PublishAot>false</PublishAot>
+		<IlcGenerateUnmanagedEntryPoints>true</IlcGenerateUnmanagedEntryPoints>
+		<!-- Specify platform target -->
+		<PlatformTarget>x64</PlatformTarget>
 	</PropertyGroup>
 </Project>
