--- a/Lumina/Runtime/ScriptAPI/ScriptAPI.runtimeconfig.json
+++ b/Lumina/Runtime/ScriptAPI/ScriptAPI.runtimeconfig.json
@@ -1,9 +1,10 @@
 {
   "runtimeOptions": {
-    "tfm": "net8.0",
+    "tfm": "net9.0",
+    "rollForward": "latestMinor",
     "framework": {
       "name": "Microsoft.NETCore.App",
-      "version": "8.0.0"
+      "version": "9.0.0"
     }
   }
 }
