--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(Sandbox "src/Sandbox.cpp")
-target_link_libraries(Sandbox PRIVATE Core Runtime ScriptAPI)
+target_link_libraries(Sandbox PRIVATE Runtime)
