--- a/Lumina/Core/CMakeLists.txt
+++ b/Lumina/Core/CMakeLists.txt
@@ -16,11 +16,6 @@ add_library(Core STATIC
     ${CORE_PUBLIC_HEADERS}
 )
 
-# Add GLM includes (header-only)
-target_include_directories(Core PUBLIC
-    ${CMAKE_SOURCE_DIR}/Lumina/Runtime/deps/glm
-)
-
 target_include_directories(Core
     PUBLIC 
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -33,3 +28,15 @@ target_include_directories(Core
 set_target_properties(Core PROPERTIES
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
 )
+
+include(FetchContent)
+
+FetchContent_Declare(
+	glm
+	GIT_REPOSITORY	https://github.com/g-truc/glm.git
+	GIT_TAG 	bf71a834948186f4097caa076cd2663c69a10e1e #refs/tags/1.0.1
+)
+
+FetchContent_MakeAvailable(glm)
+
+target_link_libraries(Core PRIVATE glm::glm)
